--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "blog.maximeheckel.com",
+  "name": "website",
   "private": true,
-  "description": "blog.maximeheckel.com - Blog",
+  "description": "website",
   "version": "0.5.0",
-  "author": "Maxime Heckel <hello@maximeheckel.com>",
+  "author": "Vikas Singh <officialvissih.com>",
   "type": "module",
   "scripts": {
     "analyze": "cross-env ANALYZE=true next build",
@@ -122,7 +122,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MaximeHeckel/blog.maximeheckel.com"
+    "url": "https://github.com/vissih/website"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
