--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.4",
     "maath": "^0.10.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@iconify/react": "^6.0.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
